--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -11,6 +11,7 @@ html {
 
 nav {
     width: 100%;
+    min-width: 200px;
     height: 80px;
     background-color: #192E54;
     vertical-align: middle;
