--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -37,7 +37,11 @@
                 </div>
                 <h3>Enter Room Code</h3>
                 <input (keyup.enter)="onKey($event)">
-                <div class="leave-btn" (click)="leaveroom()">Leave Room</div>
+                <div class="leave-class">
+                  <div class="leave-btn" (click)="leaveroom()">Leave Room</div>
+
+                </div>
+
                 <h3>Enter your altitude</h3>
                 <input (keyup.enter)="onKeyalt($event)">
                 <div class="instruction">
