--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -41,7 +41,7 @@ body {
 .login-box h1 {
     float: left;
     font-size: 40px;
-    border-bottom: 
+    border-bottom: 1px;
     margin-bottom: 50px;
     padding: 13px 0;
 }
