--- a/src/app/flight-data/flight-data.component.css
+++ b/src/app/flight-data/flight-data.component.css
@@ -1,5 +1,10 @@
 @import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
 
+@import "https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css";
+
+@import "https://fonts.googleapis.com/css?family=Titillium+Web:300";
+
+
 * {
   margin: 0;
   padding: 0;
@@ -126,7 +131,7 @@ ul li:hover a{
 .map {
 
   height: 100%;
-  width: 75%;
+  width: 100%;
 
 }
 
@@ -140,21 +145,7 @@ ul li:hover a{
   border-radius: 10px;
   margin: 20px 38px;
 }
-.hud {
-  width: 285px;
-  min-width: 285px;
-  min-height: 140px;
-  border-radius: 100px;
-  background: rgb(255,193,0);
-  background: linear-gradient(to right bottom, rgba(218, 194, 64, 0.7),rgba(251, 255, 9, 0.3));
-  backdrop-filter: blur(2rem);
-  margin: 20px 38px;
-  text-align: center;
-  padding-top: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .hud-class {
   display: flex;
   align-items: center;
@@ -162,10 +153,11 @@ ul li:hover a{
 }
 
 .voice-activation{
+  margin-left: 30px;
   font-size: 45px;
   color: #f56200;
   text-align: center;
-  margin: 20px 20px;
+  /* margin: 20px 20px; */
   transition: .5s;
 }
 .fas {
@@ -177,13 +169,12 @@ ul li:hover a{
 }
 
 i {
-  background: rgb(255,193,0);
-  background: linear-gradient(to right bottom, rgba(218, 194, 64, 0.7),rgba(251, 255, 9, 0.3));
+  background: linear-gradient(to right bottom, rgba(205, 114, 86, 0.7), rgba(222, 21, 21, 0.834));
   backdrop-filter: blur(2rem);
   height: 60px;
   width: 60px;
   border-radius: 10px;
-  margin: auto 20px;
+  /* margin: auto 20px; */
   padding-top: 6px;
 
 }
@@ -332,7 +323,7 @@ h3{
   align-items: center;
   justify-content: center; */
   width : 150px;
-  background-color: #192E54;
+  background: linear-gradient(to right bottom, rgba(205, 114, 86, 0.7), rgba(222, 21, 21, 0.834));;
   border: none;
   color: white;
   padding: 5px;
@@ -359,4 +350,215 @@ h3{
   flex-direction: column;
 }
 
+.container2 {
+    position: absolute;
+    width: 320px;
+    height: 400px;
+    right: 5%;
+    top: 2%;
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5);
+    background: linear-gradient(to right bottom, rgba(119, 123, 206, 0.7), rgba(46, 48, 175, 0.834));
+    backdrop-filter: blur(2px);
+    border-radius: 7px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    z-index: 9;
+}
 
+.dataset {
+margin-top: 10px;
+display: flex;
+flex-direction: row;
+align-items: center;
+text-align: center;
+
+}
+
+/* .data {
+display: flex;
+align-items: center;
+text-align: center;
+} */
+
+.rec-contain {
+margin: 5px;
+width: 68px;
+height: 68px;
+left: 90px;
+top: 37px;
+border-radius: 10px;
+font-family: 'Titillium Web', sans-serif;
+background: rgb(255, 255, 255);
+
+
+}
+
+
+.data-title {
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center; */
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    line-height: 20px;
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: bold;
+    font-size: 0.8rem;
+    color: rgb(255, 255, 255);
+    /* border-bottom: 3px solid rgb(89, 79, 225); */
+    background: linear-gradient(to right bottom, rgba(205, 114, 86, 0.7), rgba(222, 21, 21, 0.834));
+
+}
+
+.rec-contain p{
+    top: 0px;
+    margin-top: 8px;
+    font-size: 0.8rem;
+}
+
+.flight-time {
+display: flex;
+/* justify-content: space-around; */
+line-height : 17px;
+margin: 8px;
+width: 160px;
+height: 50px;
+left: 90px;
+top: 37px;
+border-radius: 10px;
+font-family: 'Titillium Web', sans-serif;
+background: rgb(255, 255, 255);
+
+
+}
+
+.time-title {
+    border-top-left-radius: 9px;
+    display: flex;
+    align-items: center;
+    padding: 0 10px 0 10px;
+    border-bottom-left-radius: 9px;
+    line-height: 20px;
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: bold;
+    font-size: 0.8rem;
+    color: rgb(255, 255, 255);
+    /* border-bottom: 3px solid rgb(89, 79, 225); */
+    background: linear-gradient(to right bottom, rgba(205, 114, 86, 0.7), rgba(222, 21, 21, 0.834));
+}
+
+.switch-button {
+    margin-top: 3px;
+    background: rgba(255, 255, 255, 0.56);
+    border-radius: 30px;
+    overflow: hidden;
+    width: 120px;
+    height: 30px;
+    text-align: center;
+    letter-spacing: 1px;
+    color: #155fff;
+    position: relative;
+    padding-right: 55px;
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: bold;
+    font-size: 0.7rem;
+}
+.switch-button:before {
+    content: "Armed";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+    pointer-events: none;
+}
+.switch-button-checkbox {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 2;
+}
+.switch-button-checkbox:checked + .switch-button-label:before {
+    transform: translateX(60px);
+    transition: transform 300ms linear;
+}
+.switch-button-checkbox + .switch-button-label {
+    position: relative;
+    padding: 6px 6px;
+    display: block;
+    user-select: none;
+    pointer-events: none;
+}
+.switch-button-checkbox + .switch-button-label:before {
+    content: "";
+    background: #fff;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 30px;
+    transform: translateX(0);
+    transition: transform 300ms;
+}
+.switch-button-checkbox + .switch-button-label .switch-button-label-span {
+    position: relative;
+}
+
+
+.dragheader {
+    padding: 10px;
+    margin-top: 7px;
+    border-radius: 7px;
+    cursor: move;
+    z-index: 10;
+    background: linear-gradient(to right bottom, rgba(251, 241, 51, 0.7), rgba(237, 21, 21, 0.834));
+    color: #fff;
+}
+
+#draggable-elem{
+    cursor: move;
+}
+.hud-container{
+  position: absolute;
+  width: 285px;
+  height: 160px;
+  min-width: 285px;
+  min-height: 140px;
+  border-radius: 100px;
+  right: 5%;
+  bottom: 2%;
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5);
+  background: linear-gradient(to right bottom, rgba(119, 123, 206, 0.7), rgba(46, 48, 175, 0.834));
+  backdrop-filter: blur(2px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  z-index: 9;
+}
+
+/* .hud {
+  background: rgb(255,193,0);
+  background: linear-gradient(to right bottom, rgba(218, 194, 64, 0.7),rgba(251, 255, 9, 0.3));
+  backdrop-filter: blur(2rem);
+  margin: 20px 38px;
+  text-align: center;
+  padding-top: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
