--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -21,6 +21,7 @@
 
     <main>
         <div class="container">
+
             <div class="plan">
 
                 <div class="buttonClass">
@@ -35,21 +36,24 @@
                     <p class="number"><span style="font-size: 20px;" id="longitude">Lon : {{ this.Lon }}</span></p>
 
                 </div>
-                <h3>Enter Room Code</h3>
-                <input (keyup.enter)="onKey($event)">
-                <div class="leave-class">
-                  <div class="leave-btn" (click)="leaveroom()">Leave Room</div>
-
-                </div>
-
-                <h3>Enter your altitude</h3>
-                <input (keyup.enter)="onKeyalt($event)">
-                <div class="instruction">
-                  <p>to input your room or altitude please press enter on your keyboard, So our system can receive it. </p>
-                </div>
 
 
 
+
+            </div>
+            <div class="plan2">
+              <h3 style="margin-top: 5px;">Enter Room Code</h3>
+              <input (keyup.enter)="onKey($event)">
+              <div class="leave-class">
+                <div class="leave-btn" (click)="leaveroom()">Leave Room</div>
+
+              </div>
+
+              <h3>Enter your altitude</h3>
+              <input (keyup.enter)="onKeyalt($event)">
+              <!-- <div class="instruction">
+                <p>to input your room or altitude please press enter on your keyboard, So our system can receive it. </p>
+              </div> -->
             </div>
 
             <div class="map">
