--- a/src/app/parameter/parameter.component.css
+++ b/src/app/parameter/parameter.component.css
@@ -1,5 +1,9 @@
 @import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
 
+@import "https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css";
+
+@import "https://fonts.googleapis.com/css?family=Titillium+Web:300";
+
 * {
   margin: 0;
   padding: 0;
@@ -12,16 +16,16 @@ main {
   padding: 0;
   min-height: 100vh;
   min-width: 150vh;
-  background: linear-gradient(to right top, #ffc100, #ff4d00);
+  background: linear-gradient(to right bottom, rgb(205, 114, 86), rgb(222, 21, 21));
   display: flex;
   align-items: center;
   flex-direction: column;
+  font-family: 'Titillium Web', sans-serif;
 }
 body{
   min-height: 100vh;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
   background-size: cover;
 
 }
@@ -30,14 +34,14 @@ body{
 table {
   width: 60%;
   height: auto;
-  border: 4px solid #192E54;
+  border: 4px solid #7130a2;
   margin: 0 auto;
   margin-top: 20px;
   margin-bottom: 40px;
 }
 
 th {
-  background-color: #192E54;
+  background: linear-gradient(to right bottom, rgb(119, 123, 206), rgb(46, 48, 175));
   color: white;
 }
 
@@ -69,7 +73,7 @@ input {
 }
 
 button {
-  background-color: #192E54;
+  background: linear-gradient(to right bottom, rgb(119, 123, 206), rgb(46, 48, 175));;
   margin: 50px 10px 0 0;
   padding: 8px;
   text-decoration: none;
@@ -110,7 +114,6 @@ button.clr-btn:hover{
 }
 
 .instruction {
-  font-family: sans-serif;
   color: white;
   margin: 10px;
 }
@@ -121,7 +124,7 @@ button.clr-btn:hover{
 
 .leave-btn{
   width: 150px;
-  background-color: #192E54;
+  background: linear-gradient(to right bottom, rgb(119, 123, 206), rgb(46, 48, 175));;
   border: none;
   color: white;
   padding: 5px;
