--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -95,6 +95,15 @@
               </a>
 
           </li>
+          <li class="has-subnav">
+            <a href="/parameter">
+               <i class="fa fa-camera fa-2x"></i>
+                <span class="nav-text">
+                    Video
+                </span>
+            </a>
+
+        </li>
 
       </div>
 
