--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,4 +1,6 @@
 @import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
+@import "https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css";
+@import "https://fonts.googleapis.com/css?family=Titillium+Web:300";
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +9,6 @@
 
 main {
     min-height: 100vh;
-    background: linear-gradient(to right top, #ffc100, #ff4d00);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,7 +17,7 @@ main {
 body {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     background-size: cover;
 }
 
@@ -24,9 +25,10 @@ body {
     background: rgb(255, 193, 0);
     min-height: 420px;
     min-width: 450px;
-    background: linear-gradient(to right bottom, rgba(218, 194, 64, 0.7), rgba(251, 255, 9, 0.3));
+    background: linear-gradient(to right bottom, rgba(96, 87, 223, 0.7), rgba(9, 25, 255, 0.3));
     border-radius: 2rem;
     backdrop-filter: blur(2rem);
+    z-index: 1;
 }
 
 .login-box {
@@ -41,7 +43,7 @@ body {
 .login-box h1 {
     float: left;
     font-size: 40px;
-    border-bottom: 1px;
+    border-bottom: 6px solid #ff0022;
     margin-bottom: 50px;
     padding: 13px 0;
 }
@@ -52,7 +54,7 @@ body {
     font-size: 20px;
     padding: 8px 0;
     margin: 8px 0;
-    border-bottom: 1px solid #ff6600;
+    border-bottom: 1px solid #ff0022;
 }
 
 .textbox i {
@@ -77,7 +79,7 @@ body {
 .btn {
     width: 100%;
     background: none;
-    background-color: #ff6600;
+    background: linear-gradient(to right bottom, rgb(205, 114, 86), rgb(222, 21, 21));
     border: none;
     color: white;
     padding: 5px;
@@ -87,18 +89,20 @@ body {
     margin: 12px 0;
     border-radius: 2rem;
     transition: .5s;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 input.btn:hover {
-    background: #ff8800;
+    background: #cc6d7d;
 }
 
 nav {
     width: 100%;
     height: 80px;
     margin: 0 auto;
-    background-color: #192E54;
     vertical-align: middle;
+    position: fixed;
+    z-index: 9;
 }
 
 nav img {
@@ -119,21 +123,41 @@ nav ul li {
 nav ul li a {
     padding: 5px 15px 5px 15px;
     color: white;
-    font-family: sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     font-weight: bold;
     text-decoration: none;
     margin: 18px 10px 0 0;
-    background: #F59400;
+    background: linear-gradient(to right bottom, rgba(119, 123, 206, 0.7), rgba(46, 48, 175, 0.834));
     border-radius: 5px;
     transition: .5s;
 }
 
 nav ul li a.active:hover {
-    background: #ffbb00;
+    background: #5f91dd;
 }
 
 label.form-label {
     font-size: 16px;
     font-weight: bold;
-    color: #ff4d00;
+    color: #f5f4f4;
 }
+
+.video-container{
+  max-width: 100%;
+  overflow-x: hidden;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  object-fit: contain;
+  position: absolute;
+}
+video{
+  position: fixed;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  filter: brightness(0.7);
+  }
