--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,7 +16,9 @@
         </ul>
 
     </nav>
-
+    <div class="video-container">
+      <video autoplay [muted]="'muted'" loop> <source src="../../assets/video/hero.mp4" type="video/mp4"></video>
+    </div>
 
     <main>
         <section class="glass">
